files-spec passing