@@ -13,21 +13,22 @@ import java.util.stream.Stream;
 
 public class ClientHandler {
 
-    public HttpResponse handle(HttpRequest req) {
-        Path directory = Paths.get(System.getProperty("user.dir") + req.getPath());
+    public HttpResponse handle(HttpRequest req, String root) {
         if (req.getMethod() == Methods.GET) {
             if (req.getPath().equals("/") || req.getPath().equals("/hello"))
                 return new HttpResponse(StatusCode.OK, "text/html", "<html><h1>Hello, World!</h1></html>".getBytes());
 
             if (req.getPath().equals("/listing")) {
                 ByteArrayOutputStream body = new ByteArrayOutputStream();
-                directory = Paths.get(System.getProperty("user.dir") + "/src/testroot");
-                try (Stream<Path> paths = Files.list(directory)){
+                try (Stream<Path> paths = Files.list(Path.of(root))) {
                     body.write("<html><body><ul>".getBytes());
                     paths.forEach(path -> {
                         try {
-                            body.write(("<li><a href=\"/src/testroot/" + path.getFileName().toString() + "\">").getBytes());
-                            body.write(path.getFileName().toString().getBytes());
+                            String name = path.getFileName().toString();
+                            boolean isDir = Files.isDirectory(path);
+                            String href = isDir ? req.getPath() + "/" + name : "/" + name;
+                            body.write(("<li><a href=\"" + href + "\">").getBytes());
+                            body.write(name.getBytes());
                             body.write("</a></li>".getBytes());
                         } catch (IOException e) {
                             throw new RuntimeException(e);
@@ -40,11 +41,52 @@ public class ClientHandler {
                     return new HttpResponse(StatusCode.NOT_FOUND);
                 }
             }
+
+            if (req.getPath().equals("/listing/img")) {
+                ByteArrayOutputStream body = new ByteArrayOutputStream();
+                try (Stream<Path> paths = Files.list(Path.of(Path.of(root) + "/img"))) {
+//                    paths.forEach(System.out::println);
+                    body.write("<html><body><ul>".getBytes());
+                    paths.forEach(path -> {
+                        try {
+                            String name = path.getFileName().toString();
+                            boolean isDir = Files.isDirectory(path);
+                            String href = isDir ? req.getPath() + "/" + name : "/" + name;
+                            body.write(("<li><a href=\"/img" + href + "\">").getBytes());
+                            body.write(name.getBytes());
+                            body.write("</a></li>".getBytes());
+                        } catch (IOException e) {
+                            throw new RuntimeException(e);
+                        }
+                    });
+                    body.write("</ul></body></html>".getBytes());
+
+                    return new HttpResponse(StatusCode.OK, "text/html", body.toByteArray());
+                } catch (IOException e) {
+                    return new HttpResponse(StatusCode.NOT_FOUND);
+                }
+            }
+
+            if (req.getPath().startsWith("/img/")) {
+                Path path = Path.of(root, req.getPath()); // full path to file
+                if (Files.exists(path) && !Files.isDirectory(path)) {
+                    try {
+                        byte[] body = Files.readAllBytes(path);
+                        String mimeType = Files.probeContentType(path);
+                        return new HttpResponse(StatusCode.OK, mimeType, body);
+                    } catch (IOException e) {
+//                        return new HttpResponse(StatusCode.INTERNAL_SERVER_ERROR);
+                    }
+                } else {
+                    return new HttpResponse(StatusCode.NOT_FOUND);
+                }
+            }
         }
 
         try {
-            byte[] body = Files.readAllBytes(directory);
-            String mimeType = Files.probeContentType(directory);
+            Path path = Path.of(root, req.getPath());
+            byte[] body = Files.readAllBytes(path);
+            String mimeType = Files.probeContentType(path);
 
             return new HttpResponse(StatusCode.OK, mimeType, body);
 
